--- a/Crisis.html
+++ b/Crisis.html
@@ -3,133 +3,189 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Incident Report Protocol & Policy</title>
+  <title>Incident Report Protocol</title>
   <link href="https://cdn.jsdelivr.net/npm/@picocss/pico@1.5.10/css/pico.min.css" rel="stylesheet">
   <style>
     body {
-      max-width: 960px;
+      max-width: 800px;
       margin: auto;
       padding: 2rem;
     }
     header {
       text-align: center;
-      padding-bottom: 2rem;
+      padding-bottom: 1.5rem;
     }
     header h1 {
       margin-bottom: 0.5rem;
     }
+    .critical-info {
+      background-color: var(--card-background-color);
+      border: 1px solid var(--primary-focus);
+      border-radius: var(--border-radius);
+      padding: 1.5rem;
+      margin-bottom: 2rem;
+      text-align: center;
+    }
+    .critical-info h2 {
+        margin-bottom: 1rem;
+        color: var(--primary);
+    }
+    .critical-info p {
+        margin-bottom: 1rem;
+    }
+    .call-kat {
+      background: #ffe5e5;
+      border: 2px solid #e53935;
+      padding: 1rem;
+      margin-bottom: 1.5rem;
+      font-weight: bold;
+      text-align: center;
+      border-radius: var(--border-radius);
+    }
+    .call-kat a {
+        font-size: 1.1em;
+        color: #b71c1c; /* Darker red for contrast */
+    }
+    .call-monica {
+      background: #ffe5e5;
+      border: 2px solid #e53935;
+      padding: 1rem;
+      margin-bottom: 1.5rem;
+      font-weight: bold;
+      text-align: center;
+      border-radius: var(--border-radius);
+    }
+    .call-monica a {
+        font-size: 1.1em;
+        color: #b71c1c; /* Darker red for contrast */
+    }
     .button {
       display: inline-block;
-      margin-top: 1rem;
+      margin-top: 0.5rem;
+      margin-bottom: 1rem;
     }
-    blockquote {
-      border-left: 0.25rem solid var(--primary);
-      padding-left: 1rem;
-      color: var(--muted-color);
-      background-color: var(--muted-border-color);
+    details {
+      margin-top: 1.5rem;
+      border: 1px solid var(--muted-border-color);
+      border-radius: var(--border-radius);
+      background-color: var(--card-background-color);
     }
-    .call-first {
-      background: #ffe5e5;
-      border-left: 5px solid #e53935;
-      padding: 1rem;
-      margin-bottom: 2rem;
+    details summary {
+      padding: 1rem 1.5rem;
       font-weight: bold;
+      cursor: pointer;
+      border-bottom: 1px solid var(--muted-border-color);
+    }
+    details[open] summary {
+       border-bottom: 1px solid var(--muted-border-color);
+    }
+    .details-content {
+       padding: 0 1.5rem 1.5rem 1.5rem;
+    }
+    .details-content h3 {
+        margin-top: 1.5rem;
+        margin-bottom: 0.75rem;
+        border-bottom: 1px solid var(--muted-border-color);
+        padding-bottom: 0.25rem;
+    }
+     .details-content ul {
+        margin-left: 1.5rem; /* Indent lists */
+     }
+    footer {
+        margin-top: 2rem;
+        text-align: center;
+    }
+    footer p {
+      margin-bottom: 0.25rem;
+      font-size: var(--font-size-sm);
+      color: var(--muted-color);
     }
   </style>
 </head>
 <body>
   <header>
-    <h1>New Incident Report Protocol & Policy</h1>
-    <p>Please review and switch to this method for completing incident reports going forward.</p>
+    <h1>Incident Report Protocol</h1>
   </header>
 
   <main>
-    <section class="call-first">
-      📞 <strong>Before anything else, call Kat at <a href="tel:6194037052">619-403-7052</a></strong>
+    <section class="critical-info">
+        <h2>Critical Actions & Links</h2>
+
+        <div class="call-kat">
+            📞 <strong>FIRST (Non-Emergency): Call Kat at <a href="tel:6194037052">619-403-7052</a></strong>
+        </div>
+        <div class="call-monica">
+            📞 <strong>SECOND (Non-Emergency): Call Monica at <a href="tel:2063496854">206-349-6854</a></strong>
+        </div>
+
+        <p><strong>🚨 True Emergency? Dial <code>911</code> Immediately!</strong></p>
+        <p>
+            <strong>📝 Report Form:</strong><br>
+            <a href="https://forms.office.com/r/FR8FJUAYuU" class="button" target="_blank">Open Incident Report Form</a>
+        </p>
+         <small>Email photos/attachments to <a href="mailto:frontdesk@housinghope.org">frontdesk@housinghope.org</a> referencing the incident report.</small>
     </section>
 
-    <section>
-      <h2>Announcement</h2>
-      <blockquote>
-        <p>Hello Everyone,</p>
-        <p>Please review this new Incident Report Protocol & Policy and switch to this method for completing incident reports going forward. Let me know if you have any questions.</p>
-        <p>Thank you,<br>Monica</p>
-      </blockquote>
-    </section>
+    <details>
+      <summary>Detailed Protocol & Reporting Information</summary>
+      <div class="details-content">
+        <h3>Overview & Purpose</h3>
+        <p>Events occur within Housing Hope and HopeWorks programs which require awareness at various levels of the organization and documentation. Timely reporting and documentation of these incidents allows the organization to remain responsive to dangerous situations or circumstances that place our operations at risk. Your support of this policy will help assure our collective safety and the well-being of residence, staff, and the community.</p>
 
-    <section>
-      <h2>Overview & Purpose</h2>
-      <p>Timely reporting and documentation of incidents ensures the safety and well-being of our residents, staff, and community. This protocol outlines the steps, categories, and timelines for submitting incident reports.</p>
-    </section>
+        <h3>Emergency Medical Attention</h3>
+        <p>Prior to reporting an incident to Housing Hope and HopeWorks, anyone experiencing a serious or life-threatening injury or illness must seek medical attention first:</p>
+        <ul>
+            <li>Call 911, or</li>
+            <li>Seek medical care at the Emergency Room</li>
+        </ul>
+        <p>Those Individuals experiencing a non-life-threatening issue should visit a Walk-In Clinic.</p>
 
-    <section>
-      <h2>Getting Started</h2>
-      <p>Access the Incident Report Form:</p>
-      <p><a href="https://forms.office.com/r/FR8FJUAYuU" class="button" target="_blank">Open Incident Report Form</a></p>
-      <p>After submission, you have the option to save the form. For photos or additional documentation (e.g., police reports), email them to <a href="mailto:frontdesk@housinghope.org">frontdesk@housinghope.org</a> with the property name and date of occurrence.</p>
-    </section>
+        <h3>Incident Categories (The 5 P's)</h3>
+        <p>Please make note of the time frames for submitting reports for incidents involving:</p>
+        <ul>
+            <li>Personal injury (staff, resident, client, volunteer, visitor)</li>
+            <li>Property damage (theft, fire, building damage)</li>
+            <li>Police/fire/ambulance call</li>
+            <li>Public relations issues (litigation threatened, neighbor hostility, media investigations/inquiries, etc.)</li>
+            <li>Program/client related (rules violations, threats)</li>
+        </ul>
 
-    <section>
-      <h2>Emergency Procedures</h2>
-      <p><strong>If an incident is a true emergency, dial <code>911</code> immediately.</strong></p>
-      <ul>
-        <li>Life-threatening injuries or illnesses: Call 911 or go to the Emergency Room.</li>
-        <li>Non-life-threatening issues: Visit a Walk-in Clinic.</li>
-      </ul>
-    </section>
+        <h3>General Reporting Requirements</h3>
+        <p>Incidents are to be documented by any staff member who witnesses the event. Where there was no staff present the staff member who learns of the incident provides written documentation. Include the following:</p>
+        <ul>
+            <li>Date and time of the incident.</li>
+            <li>Location and/or address of the incident.</li>
+            <li>Description of what happened.</li>
+            <li>Who was involved and any witnesses. Include Names, Positions or Relation to Housing Hope.</li>
+            <li>Type and severity of harm or injury sustained.</li>
+            <li>Medical treatments administered to address the incident.</li>
+            <li>Steps taken to address the incident.</li>
+            <li>Attach any police reports, photos, videos, or documents (via email to <a href="mailto:frontdesk@housinghope.org">frontdesk@housinghope.org</a>).</li>
+        </ul>
 
-    <section>
-      <h2>Incident Categories</h2>
-      <ul>
-        <li>Personal Injury (staff, resident, client, volunteer, visitor)</li>
-        <li>Property Damage (theft, fire, building damage)</li>
-        <li>Police/Fire/Ambulance Call</li>
-        <li>Public Relations Issues (litigation threatened, media inquiries, etc.)</li>
-        <li>Program/Client Related (rule violations, threats)</li>
-      </ul>
-    </section>
+        <h3>Employee Incident Requirements</h3>
+        <p>In addition to the general requirements, employee incidents must include:</p>
+        <ul>
+            <li>Worker's name and contact information.</li>
+            <li>Details of the employee's duties when the incident occurred.</li>
+            <li>Description of what happened and type of concern.</li>
+            <li>Any near-miss conditions or safety violations that were present.</li>
+            <li>Corrective action taken to prevent similar events from happening in the future.</li>
+        </ul>
+         <p><strong>Notify department supervisor within 2 hours if not sooner.</strong></p>
+         <p><strong>Complete the Incident Report form within 24 hours.</strong></p>
 
-    <section>
-      <h2>Reporting Requirements</h2>
-      <p>Include the following information in every report:</p>
-      <ul>
-        <li>Date & time of incident</li>
-        <li>Location/address</li>
-        <li>Description of what happened</li>
-        <li>Who was involved and any witnesses (names, positions/relations)</li>
-        <li>Type & severity of harm or injury</li>
-        <li>Medical treatments administered</li>
-        <li>Steps taken to address the incident</li>
-        <li>Attach any police reports, photos, videos, or documents</li>
-      </ul>
-    </section>
 
-    <section>
-      <h2>Employee Incidents</h2>
-      <ul>
-        <li>Include all general reporting requirements above</li>
-        <li>Worker's name & contact information</li>
-        <li>Details of duties at time of incident</li>
-        <li>Near-miss conditions or safety violations present</li>
-        <li>Corrective actions taken</li>
-      </ul>
-      <p><strong>Notify department supervisor within 2 hours.</strong></p>
-      <p><strong>Complete the form within 24 hours.</strong></p>
-    </section>
+        <h3>Submission & Follow-up</h3>
+        <p>All Incident Reports will be logged in and forwarded to the Housing Hope and HopeWorks Strategic Leadership Team and the Department Directors. The Department Director will route the report to all pertinent staff, secure input, and determine actions to be taken based on safety policies, insurance coverage, training needs, public relations responses and fiscal impacts.</p>
+      </div>
+    </details>
 
-    <section>
-      <h2>Submission & Follow-up</h2>
-      <ul>
-        <li>Email photos/attachments to <a href="mailto:frontdesk@housinghope.org">frontdesk@housinghope.org</a> referencing the incident report.</li>
-        <li>All reports are logged and forwarded to the Strategic Leadership Team and Department Directors.</li>
-        <li>The Department Director will coordinate further action based on safety policies, insurance, training, PR, and fiscal impact.</li>
-      </ul>
-    </section>
   </main>
 
   <footer>
     <hr>
-    <p>For questions, contact your Leadership Team or <a href="mailto:Announcements@housinghope.org">Announcements@housinghope.org</a></p>
+    <p>Questions? Contact your Leadership Team or <a href="mailto:Announcements@housinghope.org">Announcements@housinghope.org</a></p>
     <p>Housing Hope | 5830 Evergreen Way, Everett, WA 98203 | 425.347.6556 Ext. 328</p>
     <p>&copy; 2025 Housing Hope</p>
   </footer>
