--- a/navbar.html
+++ b/navbar.html
@@ -79,7 +79,7 @@
                         <li><a class="dropdown-item" href="ADULT_FULL_ASSESSMENT.pdf" target="_blank">Adult Assessment (Entry/Exit Reference)</a></li>
                         <li><a class="dropdown-item" href="Annual Assessment.pdf" target="_blank">Annual Assessment (Reference)</a></li>
                         <li><a class="dropdown-item" href="CHILD_FULL_ASSESSMENT.pdf" target="_blank">Child Assessment (Entry/Exit Reference)</a></li>
-                        <li><a class="dropdown-item" href="Exit from Homeless Housing Datasheet Guide2.pdf" target="_blank">Exit from Homeless Housing Datasheet Guide2</a></li>
+                        <li><a class="dropdown-item" href="Exit from Homeless Housing Datasheet Guide2.pdf" target="_blank">Exit from Homeless Housing Datasheet Guide</a></li>
                         <li><a class="dropdown-item" href="Fenn Jorstad.pdf" target="_blank">Fenn Jorstad (Required for Adult Assessments)</a></li>
                         <li><a class="dropdown-item" href="HMISROI.pdf" target="_blank">HMIS ROI</a></li>
                         <li><a class="dropdown-item" href="Occupancy Departure Guide.pdf" target="_blank">Occupancy Departure Guide</a></li>
