--- a/4.html
+++ b/4.html
@@ -255,7 +255,7 @@ I'll implement Approach 2 (Interactive Executive Summary) as it provides the bes
                         <span class="change-type type-modified">Modified</span>
                     </div>
                     <div class="change-description">
-                        Version history updated to include V1.7 (April 2025) documenting compliance with current Administration's Executive Orders affecting person-centered data collection approaches.
+                        Correction to the 3.917 Prior Living Situation data element formatting of the 2024 change log.
                     </div>
                     <div class="change-location">Lines 170-175 → 170-176</div>
                 </div>
@@ -468,7 +468,7 @@ I'll implement Approach 2 (Interactive Executive Summary) as it provides the bes
                             <div class="line line-context">2. All clients in the closing HMIS shelter project must be exited</div>
                             <div class="line line-context">3. All clients that spend the first night in the new HMIS shelter must have data collected for</div>
                             <div class="line line-context">a new shelter project entry</div>
-                            <div class="line line-context">4. The old shelter project should be disabled/deactivated from entry in the system (i.e.,</div>
+                            <div class="line line-context">4. The old shelter project should be disabled/deactivated from entry in the system (i.e. closed.</div>
                             <div class="line line-removed">Projects that target certain populations are advised that nothing in these standards allows for</div>
                             <div class="line line-removed">circumventing fair housing laws. The Fair Housing Act (FHA) prohibits discrimination because</div>
                             <div class="line line-removed">of, among other things, familial status. Except where otherwise permitted by the federal program</div>
@@ -487,7 +487,7 @@ I'll implement Approach 2 (Interactive Executive Summary) as it provides the bes
                             <div class="line line-context">2. All clients in the closing HMIS shelter project must be exited</div>
                             <div class="line line-context">3. All clients that spend the first night in the new HMIS shelter must have data collected for</div>
                             <div class="line line-context">a new shelter project entry</div>
-                            <div class="line line-context">4. The old shelter project should be disabled/deactivated from entry in the system (i.e.,</div>
+                            <div class="line line-context">4. The old shelter project should be disabled/deactivated from entry in the system (i.e. closed.</div>
                             <div class="line line-context">Record if the project is a 'HOPWA-funded Medically Assisted Living Facility' or not, or that the</div>
                             <div class="line line-context">project is not HOPWA-funded (HOPWA funding source will also be identified in 2.06 Funding</div>
                             <div class="line line-context">Response Descriptions Field Name Response/Data Description</div>
